# ivy

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  bench.py  coverage_spec.md  export-readme.md  fuzz_compile.py  generate.py  ivytest.sh  pyproject.toml  pytest.ini  quicktest.sh  ruff.toml  setup_dev.sh  wt-start.sh
docs/: runtime_coverage_spec.md
examples/: differential_testing.py
scripts/: covbench.py  gh_issue_archive.py  triage.py  triage_config.example.json  triage_config.json
skills/: boa.md  code-review.md  debugging.md  dedup-divergences.md  launch-agents.md  replay.md  testing.md  vyper.md  write-skill.md
src/dumper/: contract_dumper.py  test_dumper.py
src/fuzzer/: base_fuzzer.py  base_scenario_runner.py  boa_env_adapter.py  boa_runner.py  boa_scenario_runner.py  compilation.py  corpus.py  coverage_fuzzer.py  coverage_types.py  deduper.py  differential_fuzzer.py  divergence_detector.py  export_utils.py  fuzz.py  generative_fuzzer.py  generator.py  issue_filter.py  ivy_env_adapter.py  ivy_runner.py  ivy_scenario_runner.py  mutator.py  parallel_fuzzer.py  replay_divergence.py  reporter.py  result_analyzer.py  runner.py  scenario.py  scenario_runner.py  statistics.py  storage_normalizer.py  test_fuzzer.py  trace_executor.py  trace_mutator.py  trace_types.py  type_generator.py  type_retrieval.py  value_mutator.py  xfail.py
src/gcg/: README.md
src/ivy/: __init__.py  __main__.py  abi.py  allocator.py  base_interpreter.py  base_types.py  builtins.py  cell_types.py  constants.py  context.py  convert_utils.py  ctx.py  defaults.py  env.py  evaluator.py  evm.py  evm_structures.py  exceptions.py  execution_metadata.py  expr.py  interpret.py  interpreter.py  journal.py  loader.py  source_utils.py  stmt.py  storage_types.py  tracer.py  types.py  utils.py  variable.py  visitor.py  vyper_contract.py  vyper_interpreter.py
src/unparser/: README.md  unparser.py
tests/: conftest.py  contract_dumper.py  quick_test.py  test_call_result_serialization.py  test_compiler_abi_tests.py  test_compiler_clamper_test.py  test_coverage_guidance.py  test_deduper.py  test_e2e.py  test_fuzzer_reporting.py  test_noop_gas_meter.py  test_parallel_fuzzer.py  test_replay.py  test_reporter_runtime_coverage_e2e.py  test_runtime_coverage_sites.py  test_runtime_deploy_retries.py  test_state_rollback.py  test_transient_storage_normalizer.py
tests/compiler/: test_compiler_abi.py  test_compiler_clamper.py  test_compiler_nonreentrant.py  test_compiler_unsigned_ints.py  test_concat.py  test_dynamic_array.py
tests/dumper/: test_dumper.py
tests/example_contracts/: example.vy  for_loop_example.vy
tests/ivy/: test_abi_encode_decimal.py  test_abs_overflow.py  test_as_wei_value.py  test_augassign_side_effects.py  test_bytesm_bitwise.py  test_call_timeout_budget.py  test_convert_bytes_int.py  test_convert_decimal.py  test_create_minimal_proxy_payable.py  test_create_rollback.py  test_delegatecall_constructor.py  test_delegatecall_value_transfer.py  test_deploy_storage_leak.py  test_e2e.py  test_ecrecover.py  test_events.py  (+18 more)
(+184 files in other folders)
