[project]
name = "ivy"
version = "0.1.0"
description = "An AST interpreter for Vyper with a custom EVM backend"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "vyper @ git+https://github.com/cyberthirst/vyper.git@223d9277c6b583a150e99fb502a8472294bf3c12",
    "eth-utils>=5.3.1",
    "rlp>=4.1.0",
    "coincurve>=20.0.0",
    "coverage>=7.13.1",
]

[project.optional-dependencies]
dev = [
    "titanoboa @ git+https://github.com/cyberthirst/titanoboa.git@3132f72a2d8657090bb891886574d2d6bb632464",
    "ruff>=0.6.4",
    "pyright>=1.1.0",
    "pre-commit>=3.8.0",
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
    "pytest-xdist>=3.6.1",
    "pytest-instafail>=0.5.0",
    "hypothesis==6.104.2",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
sources = ["src"]

[tool.pyright]
include = ["src"]
pythonVersion = "3.10"
typeCheckingMode = "basic"